--- a/Labo1/src/Makefile
+++ b/Labo1/src/Makefile
@@ -3,9 +3,9 @@ MCU=-p12f683
 CC=sdcc
 LD=sdcc
 CFLAGS=-I. -I/usr/local/share/sdcc/non-free/include
-TARGET=blink
+TARGET=labo1
 
-SRCS = blink.c
+SRCS = labo1.c
 
 all:
 	${CC} --use-non-free ${FAMILY} ${MCU} ${CFLAGS} -o ${TARGET} ${SRCS}
